Dibuat menggunakan Colab

--- a/Pratikum_4.ipynb
+++ b/Pratikum_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiLvxu1lnfrcc9ECF8Y8Wo",
+      "authorship_tag": "ABX9TyNya6zaH+LgEfJgGRh6SCJv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,7 +70,7 @@
         "id": "drT0jg3iWGY2",
         "outputId": "2f487fd6-bc62-480f-b8d6-6421de12aab5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
         "id": "7BqLN57kcCUu",
         "outputId": "f34250ac-02d8-420d-cdce-666b3f685c7a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
         "id": "aaAABw68fp42",
         "outputId": "cf043500-fa15-41eb-c5af-26f0cc0075c2"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
         "id": "Gb2Ob4mNg6Su",
         "outputId": "7e810d7e-95ab-4ff0-a0be-2d248a6cd6f9"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "id": "wFeVjRuJh1Ku",
         "outputId": "62bc72af-7db6-4483-e146-d8bc981f5aad"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +221,7 @@
         "id": "x1iBKMt7kI7O",
         "outputId": "a6445492-819a-48e9-8b6b-ba504379d911"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +253,7 @@
         "id": "mwTSpi5ilpr2",
         "outputId": "d953457b-3d90-4fb0-c3f0-717ba22aec36"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +285,7 @@
         "id": "KmJ5afpsnI52",
         "outputId": "085ddbb1-2240-4155-c74d-9d97e4901f73"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
         "id": "NsYICl4npCrV",
         "outputId": "12a97053-6831-49de-9363-9de5af2d265d"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,6 +333,173 @@
             "3.Yen (JPY)\n",
             "Pilih konversi(1/2/3) :1\n",
             "Dalam Dolar 60.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Latihan\n"
+      ],
+      "metadata": {
+        "id": "a73p5wfqXhs-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "angka = int(input(\"Masukkan sebuah angka: \"))\n",
+        "\n",
+        "if angka % 5 == 0:\n",
+        "    print(\"Kelipatan 5\")\n",
+        "else:\n",
+        "    print(\"Bukan kelipatan 5\")\n"
+      ],
+      "metadata": {
+        "id": "7IW3xQ57RfdS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed5f5244-c7ab-418a-f024-0a293d12958b"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan sebuah angka: 205\n",
+            "Kelipatan 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tahun = int(input(\"Masukkan tahun: \"))\n",
+        "\n",
+        "if tahun % 400 == 0:\n",
+        "    print(\"Tahun Kabisat\")\n",
+        "elif tahun % 4 == 0 and tahun % 100 != 0:\n",
+        "    print(\"Tahun Kabisat\")\n",
+        "else:\n",
+        "    print(\"Bukan Tahun Kabisat\")\n"
+      ],
+      "metadata": {
+        "id": "dWAE6QFQX2bz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f0ac834-3a48-484b-b361-adfdbcae1563"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan tahun: 2006\n",
+            "Bukan Tahun Kabisat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "angka = int(input(\"Masukkan sebuah bilangan: \"))\n",
+        "\n",
+        "if angka > 0:\n",
+        "    print(\"Bilangan positif\")\n",
+        "elif angka < 0:\n",
+        "    print(\"Bilangan negatif\")\n",
+        "else:\n",
+        "    print(\"Bilangan nol\")\n"
+      ],
+      "metadata": {
+        "id": "GT6xZeFBX9fz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "186e37fb-9aff-47c0-9423-251e26a9405d"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan sebuah bilangan: -2\n",
+            "Bilangan negatif\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bulan = int(input(\"Masukkan angka bulan (1-12): \"))\n",
+        "\n",
+        "nama_bulan = [\"Januari\", \"Februari\", \"Maret\", \"April\", \"Mei\", \"Juni\",\n",
+        "              \"Juli\", \"Agustus\", \"September\", \"Oktober\", \"November\", \"Desember\"]\n",
+        "\n",
+        "if 1 <= bulan <= 12:\n",
+        "    print(\"Bulan:\", nama_bulan[bulan-1])\n",
+        "else:\n",
+        "    print(\"Input salah\")\n"
+      ],
+      "metadata": {
+        "id": "0ZTbGGwmYCHs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8b62e8bc-ae03-4a65-9e28-474832a881c2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan angka bulan (1-12): 1\n",
+            "Bulan: Januari\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jam = int(input(\"Masukkan jam (0-23): \"))\n",
+        "\n",
+        "if 0 <= jam <= 11:\n",
+        "    print(\"Selamat Pagi\")\n",
+        "elif 12 <= jam <= 15:\n",
+        "    print(\"Selamat Siang\")\n",
+        "elif 16 <= jam <= 18:\n",
+        "    print(\"Selamat Sore\")\n",
+        "elif 19 <= jam <= 23:\n",
+        "    print(\"Selamat Malam\")\n",
+        "else:\n",
+        "    print(\"Input jam salah\")\n"
+      ],
+      "metadata": {
+        "id": "l8HCEmLUYGcr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24cdb3ef-da1d-4afd-a7d5-4a087b7f61a1"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan jam (0-23): 23\n",
+            "Selamat Malam\n"
           ]
         }
       ]
