--- a/Tugas_4.ipynb
+++ b/Tugas_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMX6Rhj1DaQQYiWTln7As4A",
+      "authorship_tag": "ABX9TyMGCHFYckDM5Ud15/BP2xku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,58 +28,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VRNOPNyWRCIk",
-        "outputId": "c74119e7-ac68-4728-8503-03094be2bbea"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "SELAMAT DATANG DI KAFE Nainggolan\n",
-            "******************************\n",
-            "Menu Makanan & Minuman:\n",
-            "1. Kopi Hitam   - Rp 12.000\n",
-            "2. Teh Manis    - Rp 8.000\n",
-            "3. Roti Bakar   - Rp 15.000\n",
-            "4. Mie Instan   - Rp 10.000\n",
-            "------------------------------\n",
-            "Silakan masukkan nomor pilihan Anda (1-4): 1\n",
-            "Anda memesan: Kopi Hitam dengan harga Rp 12000\n",
-            "\n",
-            "Total belanja sebelum diskon : Rp 12000\n",
-            "Diskon : 0% (Rp 0)\n",
-            "Total yang harus dibayar : Rp 12000\n",
-            "Total yang harus dibayar: Rp 12000. Masukkan jumlah uang Anda: Rp 100000\n",
-            "\n",
-            "--- Struk Pembayaran ---\n",
-            "Pesanan Anda   : Kopi Hitam\n",
-            "Total Harga    : Rp 12000\n",
-            "Diskon         : Rp 0\n",
-            "Total Bayar    : Rp 12000\n",
-            "Uang Dibayar   : Rp 100000\n",
-            "Kembalian      : Rp 88000\n",
-            "---------------------------\n",
-            "Terima kasih telah berbelanja di Kafe Nainggolan :)\n"
-          ]
-        }
-      ],
       "source": [
-        "\n",
-        "print(\"SELAMAT DATANG DI KAFE Nainggolan\")\n",
-        "print(\"*\"*30)\n",
+        "print(\"*\"*40)\n",
+        "print(\"SELAMAT DATANG DI KAFE NAINGGOLAN\")\n",
+        "print(\"*\"*40)\n",
         "\n",
         "print(\"Menu Makanan & Minuman:\")\n",
-        "print(\"1. Kopi Hitam   - Rp 12.000\")\n",
-        "print(\"2. Teh Manis    - Rp 8.000\")\n",
-        "print(\"3. Roti Bakar   - Rp 15.000\")\n",
-        "print(\"4. Mie Instan   - Rp 10.000\")\n",
-        "print(\"-\"*30)\n",
+        "print(\"1. Paket Keluarga  - Rp 300.000\")\n",
+        "print(\"2. Buffet Premium  - Rp 500.000\")\n",
+        "print(\"3. Seafood Deluxe  - Rp 750.000\")\n",
+        "print(\"4. Set Menu VIP    - Rp 1.000.000\")\n",
+        "print(\"-\"*40)\n",
         "\n",
         "pilihan_str: str = input(\"Silakan masukkan nomor pilihan Anda (1-4): \")\n",
         "pilihan: int = int(pilihan_str)\n",
@@ -87,26 +46,26 @@
         "harga: int = 0\n",
         "\n",
         "if pilihan == 1:\n",
-        "    nama_pesanan = \"Kopi Hitam\"\n",
-        "    harga = 12000\n",
+        "    nama_pesanan = \"Paket Keluarga\"\n",
+        "    harga = 300000\n",
         "    print(f\"Anda memesan: {nama_pesanan} dengan harga Rp {harga}\")\n",
         "elif pilihan == 2:\n",
-        "    nama_pesanan = \"Teh Manis\"\n",
-        "    harga = 8000\n",
+        "    nama_pesanan = \"Buffet Premium\"\n",
+        "    harga = 500000\n",
         "    print(f\"Anda memesan: {nama_pesanan} dengan harga Rp {harga}\")\n",
         "elif pilihan == 3:\n",
-        "    nama_pesanan = \"Roti Bakar\"\n",
-        "    harga = 15000\n",
+        "    nama_pesanan = \"Seafood Deluxe\"\n",
+        "    harga = 750000\n",
         "    print(f\"Anda memesan: {nama_pesanan} dengan harga Rp {harga}\")\n",
         "elif pilihan == 4:\n",
-        "    nama_pesanan = \"Mie Instan\"\n",
-        "    harga = 10000\n",
+        "    nama_pesanan = \"Set Menu VIP\"\n",
+        "    harga = 1000000\n",
         "    print(f\"Anda memesan: {nama_pesanan} dengan harga Rp {harga}\")\n",
         "else:\n",
         "    print(\"Maaf, pilihan menu tidak valid. Silakan jalankan ulang program.\")\n",
         "\n",
         "if harga > 0:\n",
-        "    # Tambahan: Logika Diskon\n",
+        "    # Logika Diskon\n",
         "    if harga >= 100000:\n",
         "        diskon = 0.70\n",
         "    elif harga >= 50000:\n",
@@ -136,10 +95,52 @@
         "        print(f\"Uang Dibayar   : Rp {uang_dibayar}\")\n",
         "        print(f\"Kembalian      : Rp {kembalian}\")\n",
         "        print(\"---------------------------\")\n",
-        "        print(\"Terima kasih telah berbelanja di Kafe Nainggolan :)\")\n",
+        "        print(\"Terima kasih telah berbelanja di KAFE NAINGGOLAN :)\")\n",
         "    else:\n",
         "        kekurangan = total_bayar - uang_dibayar\n",
         "        print(f\"Maaf, uang Anda kurang sebesar Rp {kekurangan}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wff6eaTZHltn",
+        "outputId": "e4d3c5bc-2f3f-491b-bc41-51f9117cc845"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "****************************************\n",
+            "SELAMAT DATANG DI KAFE NAINGGOLAN\n",
+            "****************************************\n",
+            "Menu Makanan & Minuman:\n",
+            "1. Paket Keluarga  - Rp 300.000\n",
+            "2. Buffet Premium  - Rp 500.000\n",
+            "3. Seafood Deluxe  - Rp 750.000\n",
+            "4. Set Menu VIP    - Rp 1.000.000\n",
+            "----------------------------------------\n",
+            "Silakan masukkan nomor pilihan Anda (1-4): 1\n",
+            "Anda memesan: Paket Keluarga dengan harga Rp 300000\n",
+            "\n",
+            "Total belanja sebelum diskon : Rp 300000\n",
+            "Diskon : 70% (Rp 210000)\n",
+            "Total yang harus dibayar : Rp 90000\n",
+            "Total yang harus dibayar: Rp 90000. Masukkan jumlah uang Anda: Rp 100000\n",
+            "\n",
+            "--- Struk Pembayaran ---\n",
+            "Pesanan Anda   : Paket Keluarga\n",
+            "Total Harga    : Rp 300000\n",
+            "Diskon         : Rp 210000\n",
+            "Total Bayar    : Rp 90000\n",
+            "Uang Dibayar   : Rp 100000\n",
+            "Kembalian      : Rp 10000\n",
+            "---------------------------\n",
+            "Terima kasih telah berbelanja di KAFE NAINGGOLAN :)\n"
+          ]
+        }
       ]
     }
   ]
