--- a/ATS_PRATIKUM.ipynb
+++ b/ATS_PRATIKUM.ipynb
@@ -391,7 +391,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Program: Simulasi Efisiensi Energi Pembangkit Listrik\n",
+        "# challenge Program: Simulasi Efisiensi Energi Pembangkit Listrik\n",
         "\n",
         "# Fungsi untuk menghitung efisiensi (%)\n",
         "def hitung_efisiensi(energi_masuk, energi_keluar):\n",
